# Slate-ANN

./: .gitignore  CITATION.cff  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/slate-cli/: Cargo.toml
crates/slate-cli/src/: main.rs
crates/slate-cli/tests/: cli.rs
crates/slate-core/: Cargo.toml
crates/slate-core/src/: config.rs  cost.rs  dtype.rs  error.rs  id.rs  lib.rs  metric.rs  search.rs
crates/slate-graph/: Cargo.toml
crates/slate-graph/src/: hnsw.rs  ivf.rs  lib.rs  rng.rs
crates/slate-index/: Cargo.toml
crates/slate-index/src/: brute.rs  bundle.rs  format.rs  lib.rs  neighbor.rs  topk.rs  update.rs
crates/slate-pq/: Cargo.toml
crates/slate-pq/src/: adc.rs  codebook.rs  kmeans.rs  lib.rs  rng.rs
crates/slate-simd/: Cargo.toml
crates/slate-simd/benches/: distance.rs
crates/slate-simd/src/: avx2.rs  avx512.rs  dispatch.rs  lib.rs  neon.rs  scalar.rs
crates/slate-storage/: Cargo.toml
crates/slate-storage/src/: codec.rs  format.rs  io.rs  layout.rs  lib.rs  mmap.rs  reader.rs  schedule.rs
docs/: storage-aware-search.md
scripts/: cross-test.sh
