[package]
name = "slate-core"
description = "Shared types and configuration for the Slate-ANN vector search engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
